--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: ESGF User Support
+email: esgf-swt@llnl.gov
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  ESGF Support Working Team attempting to make end users life suck less.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://esgf.github.io" # the base hostname & protocol for your site
+#twitter_username: ESGForg
+github_username:  ESGF
 
 # Build settings
 markdown: kramdown
