--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,9 @@
 title: ESGF User Support
 email: esgf-user@lists.llnl.gov
 description: > # this means to ignore newlines until "baseurl:"
-  ESGF Support Working Team attempting to make end users life suck less.
-baseurl: "/esgf-swt/" # the subpath of your site, e.g. /blog/
+  ESGF Support Working Team: <br/>
+  Attempting to make end users' life suck less.
+baseurl: "/esgf-swt" # the subpath of your site, e.g. /blog/
 url: "https://esgf.github.io" # the base hostname & protocol for your site
 #twitter_username: ESGForg
 github_username:  ESGF
